# NeuralNetwork-CPP

./: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  UtilityFunctions.cpp  UtilityFunctions.h  main.cpp
